--- a/dissertation.tex
+++ b/dissertation.tex
@@ -72,6 +72,8 @@
 
 \newacronym{ccpa}{CCPA}{\textit{California Privacy Rights Act}}
 
+\newacronym{jws}{JWS}{\textit{JSON Web Signatures}}
+
 % Acronyms
 \printglossary[type=\acronymtype,nonumberlist, title={Acrónimos}]
 
