--- a/dissertation.bib
+++ b/dissertation.bib
@@ -278,7 +278,7 @@
 	howpublished = {\url{
 	                https://csrc.nist.gov/glossary/term/message_authentication_code
 	                }},
-	note = {Acedido em: 19 de Outubro de 2025},
+	note = {Acesso em: 19 de Outubro de 2025},
 }
 
 @misc{Auth0SigningAlgorithms,
@@ -288,7 +288,7 @@
 	url = {
 	       https://auth0.com/docs/get-started/applications/signing-algorithms
 	       },
-	note = {Acedido em: 19 de Outubro de 2025},
+	note = {Acesso em: 19 de Outubro de 2025},
 }
 
 @misc{ScottBrady2020,
@@ -298,7 +298,7 @@
 	howpublished = {\url{
 	                https://www.scottbrady.io/jose/jwts-which-signing-algorithm-should-i-use
 	                }},
-	note = {Acedido em: 19 de Outubro de 2025},
+	note = {Acesso em: 19 de Outubro de 2025},
 }
 
 @article{Merlec2021,
